--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mediaquary.css">
     <!-- Boxicons CSS -->
 <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
@@ -18,20 +19,20 @@
             </div>
             <div class="weather">
                 <img src="images/rain.png" alt="Rain" class="weather_icon">
-                <h1 class="temp">20°C</h1>
-                <h2 class="city_name">Bangladesh</h2>
+                <h1 class="temp">0°C</h1>
+                <h2 class="city_name">Search City Name</h2>
                 <div class="details">
                     <div class="col">
                         <img src="images/humidity.png" alt="">
                         <div>
-                            <p class="humidity">50%</p>
+                            <p class="humidity">00</p>
                             <p>Feels Like</p>
                         </div>
                     </div>
                     <div class="col">
                         <img src="images/wind.png" alt="">
                         <div>
-                            <p class="wind">10 km/h</p>
+                            <p class="wind">00 km/h</p>
                             <p>Wind Speed</p>
                         </div>
                     </div>
